# EvolvePro

./: .gitignore  CLAUDE.md  USEAGE.md  pyproject.toml
evolvepro/wrapper/: __init__.py  dms_evolution.py  extract_embeddings.py  process_experimental.py
tests/: test_dms_evolution_wrapper.py  test_extract_embeddings_wrapper.py  test_process_experimental_wrapper.py
