[project]
authors = [{name = "rpolicastro", email = "31133814+rpolicastro@users.noreply.github.com"}]
dependencies = []
name = "EvolvePro"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["evolvepro"]

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
evolvepro = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pandas = ">=2.3.3,<3"
numpy = "<2.0"
openpyxl = ">=3.1.5,<4"
scikit-learn = ">=1.7.2,<2"
scikit-learn-extra = ">=0.2.0,<0.3"
xgboost = ">=3.1.1,<4"
matplotlib = ">=3.10.7,<4"
seaborn = ">=0.13.2,<0.14"
biopython = ">=1.86,<2"
scipy = ">=1.16.3,<2"
pytorch-cpu = ">=2.8.0,<3"

[tool.pixi.feature.plm-cpu.dependencies]
python = "3.10.*"
numpy = ">=1.22,<=1.24.3"
pytorch-cpu = "*"
biopython = "*"
fair-esm = "*"
jax-unirep = "*"
transformers = "*"
tensorflow = ">=2.0"

[tool.pixi.environments]
plm-cpu = { features = ["plm-cpu"], no-default-feature = true }

[dependency-groups]
plm-cpu = ["ankh"]
